# CANDEL

./: .gitignore  CLAUDE.md  NOTES_RADIAL_VEXT.md  PLAN_per_realisation_random_los.txt  README.md  example_local_config.toml  lint.sh  local_config_backup.toml  requirements_cpu.txt  setup.py
Code_2M++/lflike3/: .hg_archival.txt  CMakeLists.txt  f77_mangling.cmake  test_fit.py
Code_2M++/lflike3/src/: CMakeLists.txt  _lflike.cpp  config.hpp  cosmo.hpp  error.hpp  gamminc.f90  gslIntegrate.hpp  interpolate.cpp  interpolate.hpp  lf_dp_law.cpp  lf_dp_law.hpp  lf_dp_schechter.cpp  lf_dp_schechter.hpp  lf_schechter.cpp  lf_schechter.hpp  lf_tp_law.cpp  lf_tp_law.hpp  lfhelper.cpp  lfhelper.hpp  lfimpl.cpp  lfimpl.hpp  likelihood.cpp  likelihood.hpp  luminosity_distance.hpp  symbols.hpp
Code_2M++/lflike3/src/python/: __init__.py  lflike_func.py
candel/: __init__.py  _dev_utils.py  cosmography.py  data.py  evidence.py  inference.py  model.py  ppc_trgb.py  redshift2real.py  util.py
candle/: __init__.py  cosmography.py  data.py  inference.py  model.py  simpson.py  util.py
docs/: conf.py  configuration.rst  index.rst  installation.rst  maser_numerical_accuracy.md  megamaser_H0_project.md  megamaser_debug_plan.md  megamaser_disk_model_spec.md  models.rst  quickstart.rst
example_runs/: main.py  prepare_run.py
instructions/: INSTALL_GLAMDRING_GPU.md  glamdring_gpu_jobs.md  inference_task_jobs.md  maser_disk_jobs.md  maser_numerical_accuracy.md  repository_map.md
notebooks/: CF4_q0.ipynb  SDSS_FP.ipynb  compute_manticore_observer_velocity.py  config.toml  config_redshift2real.toml  example.ipynb  make_mocks.ipynb  prep_SH0ES.ipynb  priors.toml  quasar_dipole.ipynb  test_tariq.ipynb  visualise_manticore_velocity_field.py
notes/: megamaser_distances.md
paper_clusters/: __init__.py  config.py  copy_figures.py  make_all.py  plot_base_all.py  (+18 more)
(+608 files in other folders)
